--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </section>
 
     <section id="about" class="about">
-        <h2>About Me</h2>
+        <h2>I am a Computer Science Student</h2>
         <p>Your bio goes here. Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
     </section>
 
