--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         <h2>Portfolio</h2>
         <div class="portfolio-item">
             <img src="img/img1.jpg" alt="Project 1">
-            <h3>Project 1</h3>
-            <p>Description of Project 1...</p>
+            <h3>Portfolio</h3>
+            <p>Students were task to create their first repository...</p>
         </div>
         <div class="portfolio-item">
             <img src="img/img1.jpg" alt="Project 2">
-            <h3>Project 2</h3>
-            <p>Description of Project 2...</p>
+            <h3>Modify</h3>
+            <p>Student were task to modify their names...</p>
         </div>
         <!-- Add more portfolio items as needed -->
     </section>
