--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
 
     <section id="home" class="hero">
-        <h1>Jeha Batoon</h1>
+        <h1>Jeha Hisona Batoon</h1>
         <p>Web Developer & Designer</p>
         <a href="#portfolio" class="cta-button">View My Work</a>
     </section>
@@ -46,7 +46,8 @@
 
     <section id="contact" class="contact">
         <h2>Contact Me</h2>
-        <p>Feel free to get in touch. Email: your@email.com</p>
+        <p>Feel free to get in touch. Email: jehabatoon8@gmail.com</p>
+        <p>Github Account: https://github.com/MsSera</p>
     </section>
 
     <footer>
