--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <h2>Portfolio</h2>
         <div class="portfolio-item">
             <img src="img/img1.jpg" alt="Project 1">
-            <h3>Portfolio</h3>
-            <p>Students were task to create their first repository...</p>
+            <h3>First Portfolio</h3>
+            <p>Students were task to create their first repository in Github...</p>
         </div>
         <div class="portfolio-item">
             <img src="img/img1.jpg" alt="Project 2">
