modify contact me

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <section id="contact" class="contact">
         <h2>Contact Me</h2>
         <p>Feel free to get in touch. Email: jehabatoon8@gmail.com</p>
-        <p>Github Account: https://github.com/MsSera</p>
+        <p>Github Account Link: https://github.com/MsSera</p>
     </section>
 
     <footer>
