--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <section id="about" class="about">
         <h2>About Me</h2>
-        <p>I am a 3rd year Computer Science Student</p>
+        <p>I am a 3rd year Computer Science Student. I love singing and dancing.</p>
     </section>
 
     <section id="portfolio" class="portfolio">
