--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="portfolio-item">
             <img src="img/img1.jpg" alt="Project 2">
             <h3>Modify</h3>
-            <p>Student were task to modify their names...</p>
+            <p>Students were task to modify their names...</p>
         </div>
         <!-- Add more portfolio items as needed -->
     </section>
